# User

./: .gitignore  README.md
C++/Game/: README.md
C++/Game/src/: Game.cpp  Game.hpp  Laser.cpp  Laser.hpp  Makefile  Space.cpp  (+6 more)
C++/MPlayer/: README.md
C++/OMORI/: Makefile  README.md  WS  WS.c  run.sh
C++/PING-PONG/: README.md
C++/Pacman/: CMakeLists.txt  README.md
C++/Pacman/assets/data/: data.txt
C++/Pacman/assets/textures/: GHOST_COMPLETE_GUIDE.md  GHOST_TEXTURE_GUIDE.md
C++/Pacman/include/: Entity.hpp  Game.hpp  GameState.hpp  Ghost.hpp  Map.hpp  Pacman.hpp  Utils.hpp
C++/Pacman/src/: Entity.cpp  Game.cpp  Ghost.cpp  Map.cpp  Pacman.cpp  Utils.cpp  main.cpp
C++/Paint/: README.md
C++/Quiz/: README.md
C/Download_YT_Links/: Download_YT_Links  Download_YT_Links.c  Makefile  README.md  run.sh  test.c
C/Functions/: Functions.c  Makefile  README.md  run.sh
C/ImageViewer/: Makefile  README.md  main.c  run.sh
C/Interpreter/: Makefile  README.md  main.c  run.sh
C/MatchGame/: Makefile  Match3.c  README.md  run.sh
C/QJG/: .gitignore  Makefile  QJG.c  README.md  run.sh
C/QrCode/: Makefile  README.md  TinyPngOut.c  main.c  run.sh
C/SnakeGame/: Makefile  README.md  Snake.c  run.sh
C/Sudoku/: Makefile  README.md  Sudoku.c  run.sh
C/TaskManager/: Makefile  README.md  TM.c  run.sh
C/Translator/: Makefile  README.md  Translation.txt  Translator.c  run.sh
C/TypeGame/: README.md
C/Weather/: .gitignore  Makefile  README.md  Weather.c  run.sh
Python/AiChatBot/: README.md  main.py  pyproject.toml
Python/DigitRecognition/: README.md  main.py
(+47 files in other folders)
